# YOLO-ONNXRuntime-DirectML

./: CMakeLists.txt  README.md
docs/: Chinese.md
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/cmake/: YoloOrtDmlConfig.cmake.in
src/include/: YoloOrtDml.h  YoloOrtDmlExport.h  draw.h  infer.h  model.h  postprocess.h  preprocess.h
src/src/: YoloOrtDml.cpp  draw.cpp  infer.cpp  postprocess.cpp  preprocess.cpp
